bug fixes with kill actors

--- a/py/JawPositioning.ipynb
+++ b/py/JawPositioning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,29 +23,33 @@
     "    cone_halfwidth_at_jaw=jaw_posz*field_size/(2*iso)\n",
     "    centre_of_jaw_x=(jaw_long_x+jaw_narrow_x)/4\n",
     "    jaw_translation_x=cone_halfwidth_at_jaw+centre_of_jaw_x\n",
-    "    print(cone_halfwidth_at_jaw,centre_of_jaw_x)\n",
+    "#     print(cone_halfwidth_at_jaw,centre_of_jaw_x,jaw_narrow_x)\n",
+    "    print(\"jaw narrow\",jaw_narrow_x)\n",
+    "    print(\"jaw trans\", jaw_translation_x)\n",
     "    return jaw_translation_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.35 9.9025\n"
+      "xjaw\n",
+      "jaw narrow 17.61\n",
+      "jaw trans 11.2525\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "12.2525"
+       "11.2525"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +59,8 @@
     "iso=100 # cm from source\n",
     "xjaw_posz=100-53 #cm\n",
     "xjaw_height=7.8 #cm\n",
-    "jaw_long_x=20 #cm\n",
+    "jaw_long_x=18 #cm\n",
+    "print(\"xjaw\")\n",
     "calc_jaw_translation(field_size,iso,xjaw_posz,xjaw_height,jaw_long_x)"
    ]
   },
@@ -68,19 +73,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"transform: rotate(90deg); width:600px\" src=\"attachment:IMG_7247.JPG\" alt=\"sieve shaker\" title=\"Title text\" />JawGeo\n"
+    "# <img style=\"transform: rotate(90deg); width:600px\" src=\"attachment:IMG_7247.JPG\" alt=\"sieve shaker\" title=\"Title text\" />JawGeo\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.055 9.9625\n"
+      "yjaw\n",
+      "jaw narrow 19.85\n",
+      "jaw trans 12.0175\n"
      ]
     },
     {
@@ -89,7 +96,7 @@
        "12.0175"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,6 +107,7 @@
     "yjaw_posz=100-58.9 #cm\n",
     "yjaw_height=3 #cm\n",
     "jaw_long_x=20 #cm\n",
+    "print (\"yjaw\")\n",
     "calc_jaw_translation(field_size,iso,yjaw_posz,yjaw_height,jaw_long_x)\n"
    ]
   },
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +466,7 @@
        "CompletedProcess(args='pbcopy', returncode=0)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -515,151 +523,151 @@
       "/gate/mlc_y0/daughters/name                      mlc_y0_kill \n",
       "/gate/mlc_y0/daughters/insert                      wedge \n",
       "/gate/mlc_y0_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y0_kill/geometry/setNarrowerXLength  157.5 mm \n",
-      "/gate/mlc_y0_kill/geometry/setXLength          158.5 mm  \n",
+      "/gate/mlc_y0_kill/geometry/setNarrowerXLength  153.5 mm \n",
+      "/gate/mlc_y0_kill/geometry/setXLength          154.5 mm  \n",
       "/gate/mlc_y0_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y0_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y0_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y0_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y0_kill/vis/setVisible               1 \n",
       "/gate/mlc_y0_kill/vis/setColor                 white \n",
       "/gate/mlc_y1/daughters/name                      mlc_y1_kill \n",
       "/gate/mlc_y1/daughters/insert                      wedge \n",
       "/gate/mlc_y1_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y1_kill/geometry/setNarrowerXLength  158.5 mm \n",
-      "/gate/mlc_y1_kill/geometry/setXLength          159.4 mm  \n",
+      "/gate/mlc_y1_kill/geometry/setNarrowerXLength  154.5 mm \n",
+      "/gate/mlc_y1_kill/geometry/setXLength          155.4 mm  \n",
       "/gate/mlc_y1_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y1_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y1_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y1_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y1_kill/vis/setVisible               1 \n",
       "/gate/mlc_y1_kill/vis/setColor                 white \n",
       "/gate/mlc_y2/daughters/name                      mlc_y2_kill \n",
       "/gate/mlc_y2/daughters/insert                      wedge \n",
       "/gate/mlc_y2_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y2_kill/geometry/setNarrowerXLength  159.4 mm \n",
-      "/gate/mlc_y2_kill/geometry/setXLength          160.1 mm  \n",
+      "/gate/mlc_y2_kill/geometry/setNarrowerXLength  155.4 mm \n",
+      "/gate/mlc_y2_kill/geometry/setXLength          156.1 mm  \n",
       "/gate/mlc_y2_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y2_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y2_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y2_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y2_kill/vis/setVisible               1 \n",
       "/gate/mlc_y2_kill/vis/setColor                 white \n",
       "/gate/mlc_y3/daughters/name                      mlc_y3_kill \n",
       "/gate/mlc_y3/daughters/insert                      wedge \n",
       "/gate/mlc_y3_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y3_kill/geometry/setNarrowerXLength  160.1 mm \n",
-      "/gate/mlc_y3_kill/geometry/setXLength          160.5 mm  \n",
+      "/gate/mlc_y3_kill/geometry/setNarrowerXLength  156.1 mm \n",
+      "/gate/mlc_y3_kill/geometry/setXLength          156.5 mm  \n",
       "/gate/mlc_y3_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y3_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y3_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y3_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y3_kill/vis/setVisible               1 \n",
       "/gate/mlc_y3_kill/vis/setColor                 white \n",
       "/gate/mlc_y4/daughters/name                      mlc_y4_kill \n",
       "/gate/mlc_y4/daughters/insert                      wedge \n",
       "/gate/mlc_y4_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y4_kill/geometry/setNarrowerXLength  160.5 mm \n",
-      "/gate/mlc_y4_kill/geometry/setXLength          160.9 mm  \n",
+      "/gate/mlc_y4_kill/geometry/setNarrowerXLength  156.5 mm \n",
+      "/gate/mlc_y4_kill/geometry/setXLength          156.9 mm  \n",
       "/gate/mlc_y4_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y4_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y4_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y4_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y4_kill/vis/setVisible               1 \n",
       "/gate/mlc_y4_kill/vis/setColor                 white \n",
       "/gate/mlc_y5/daughters/name                      mlc_y5_kill \n",
       "/gate/mlc_y5/daughters/insert                      wedge \n",
       "/gate/mlc_y5_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y5_kill/geometry/setNarrowerXLength  160.9 mm \n",
-      "/gate/mlc_y5_kill/geometry/setXLength          161.1 mm  \n",
+      "/gate/mlc_y5_kill/geometry/setNarrowerXLength  156.9 mm \n",
+      "/gate/mlc_y5_kill/geometry/setXLength          157.1 mm  \n",
       "/gate/mlc_y5_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y5_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y5_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y5_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y5_kill/vis/setVisible               1 \n",
       "/gate/mlc_y5_kill/vis/setColor                 white \n",
       "/gate/mlc_y6/daughters/name                      mlc_y6_kill \n",
       "/gate/mlc_y6/daughters/insert                      wedge \n",
       "/gate/mlc_y6_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y6_kill/geometry/setNarrowerXLength  161.1 mm \n",
-      "/gate/mlc_y6_kill/geometry/setXLength          160.9 mm  \n",
+      "/gate/mlc_y6_kill/geometry/setNarrowerXLength  157.1 mm \n",
+      "/gate/mlc_y6_kill/geometry/setXLength          156.9 mm  \n",
       "/gate/mlc_y6_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y6_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y6_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y6_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y6_kill/vis/setVisible               1 \n",
       "/gate/mlc_y6_kill/vis/setColor                 white \n",
       "/gate/mlc_y7/daughters/name                      mlc_y7_kill \n",
       "/gate/mlc_y7/daughters/insert                      wedge \n",
       "/gate/mlc_y7_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y7_kill/geometry/setNarrowerXLength  160.9 mm \n",
-      "/gate/mlc_y7_kill/geometry/setXLength          160.6 mm  \n",
+      "/gate/mlc_y7_kill/geometry/setNarrowerXLength  156.9 mm \n",
+      "/gate/mlc_y7_kill/geometry/setXLength          156.6 mm  \n",
       "/gate/mlc_y7_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y7_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y7_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y7_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y7_kill/vis/setVisible               1 \n",
       "/gate/mlc_y7_kill/vis/setColor                 white \n",
       "/gate/mlc_y8/daughters/name                      mlc_y8_kill \n",
       "/gate/mlc_y8/daughters/insert                      wedge \n",
       "/gate/mlc_y8_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y8_kill/geometry/setNarrowerXLength  160.6 mm \n",
-      "/gate/mlc_y8_kill/geometry/setXLength          160.2 mm  \n",
+      "/gate/mlc_y8_kill/geometry/setNarrowerXLength  156.6 mm \n",
+      "/gate/mlc_y8_kill/geometry/setXLength          156.2 mm  \n",
       "/gate/mlc_y8_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y8_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y8_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y8_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y8_kill/vis/setVisible               1 \n",
       "/gate/mlc_y8_kill/vis/setColor                 white \n",
       "/gate/mlc_y9/daughters/name                      mlc_y9_kill \n",
       "/gate/mlc_y9/daughters/insert                      wedge \n",
       "/gate/mlc_y9_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y9_kill/geometry/setNarrowerXLength  160.2 mm \n",
-      "/gate/mlc_y9_kill/geometry/setXLength          159.8 mm  \n",
+      "/gate/mlc_y9_kill/geometry/setNarrowerXLength  156.2 mm \n",
+      "/gate/mlc_y9_kill/geometry/setXLength          155.8 mm  \n",
       "/gate/mlc_y9_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y9_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y9_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y9_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y9_kill/vis/setVisible               1 \n",
       "/gate/mlc_y9_kill/vis/setColor                 white \n",
       "/gate/mlc_y10/daughters/name                      mlc_y10_kill \n",
       "/gate/mlc_y10/daughters/insert                      wedge \n",
       "/gate/mlc_y10_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y10_kill/geometry/setNarrowerXLength  159.8 mm \n",
-      "/gate/mlc_y10_kill/geometry/setXLength          159.2 mm  \n",
+      "/gate/mlc_y10_kill/geometry/setNarrowerXLength  155.8 mm \n",
+      "/gate/mlc_y10_kill/geometry/setXLength          155.2 mm  \n",
       "/gate/mlc_y10_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y10_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y10_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y10_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y10_kill/vis/setVisible               1 \n",
       "/gate/mlc_y10_kill/vis/setColor                 white \n",
       "/gate/mlc_y11/daughters/name                      mlc_y11_kill \n",
       "/gate/mlc_y11/daughters/insert                      wedge \n",
       "/gate/mlc_y11_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y11_kill/geometry/setNarrowerXLength  159.2 mm \n",
-      "/gate/mlc_y11_kill/geometry/setXLength          158.3 mm  \n",
+      "/gate/mlc_y11_kill/geometry/setNarrowerXLength  155.2 mm \n",
+      "/gate/mlc_y11_kill/geometry/setXLength          154.3 mm  \n",
       "/gate/mlc_y11_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y11_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y11_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y11_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y11_kill/vis/setVisible               1 \n",
       "/gate/mlc_y11_kill/vis/setColor                 white \n",
       "/gate/mlc_y12/daughters/name                      mlc_y12_kill \n",
       "/gate/mlc_y12/daughters/insert                      wedge \n",
       "/gate/mlc_y12_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y12_kill/geometry/setNarrowerXLength  158.3 mm \n",
-      "/gate/mlc_y12_kill/geometry/setXLength          157.1 mm  \n",
+      "/gate/mlc_y12_kill/geometry/setNarrowerXLength  154.3 mm \n",
+      "/gate/mlc_y12_kill/geometry/setXLength          153.1 mm  \n",
       "/gate/mlc_y12_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y12_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y12_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y12_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y12_kill/vis/setVisible               1 \n",
       "/gate/mlc_y12_kill/vis/setColor                 white \n",
       "/gate/mlc_y13/daughters/name                      mlc_y13_kill \n",
       "/gate/mlc_y13/daughters/insert                      wedge \n",
       "/gate/mlc_y13_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y13_kill/geometry/setNarrowerXLength  157.1 mm \n",
-      "/gate/mlc_y13_kill/geometry/setXLength          156.0 mm  \n",
+      "/gate/mlc_y13_kill/geometry/setNarrowerXLength  153.1 mm \n",
+      "/gate/mlc_y13_kill/geometry/setXLength          152.0 mm  \n",
       "/gate/mlc_y13_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y13_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y13_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y13_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y13_kill/vis/setVisible               1 \n",
       "/gate/mlc_y13_kill/vis/setColor                 white \n",
       "/gate/mlc_y14/daughters/name                      mlc_y14_kill \n",
       "/gate/mlc_y14/daughters/insert                      wedge \n",
       "/gate/mlc_y14_kill/setMaterial                  Tungsten \n",
-      "/gate/mlc_y14_kill/geometry/setNarrowerXLength  156.0 mm \n",
-      "/gate/mlc_y14_kill/geometry/setXLength          154.5 mm  \n",
+      "/gate/mlc_y14_kill/geometry/setNarrowerXLength  152.0 mm \n",
+      "/gate/mlc_y14_kill/geometry/setXLength          150.5 mm  \n",
       "/gate/mlc_y14_kill/geometry/setYLength          5 mm \n",
       "/gate/mlc_y14_kill/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y14_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y14_kill/placement/setTranslation     -5 0 0 mm \n",
       "/gate/mlc_y14_kill/vis/setVisible               1 \n",
       "/gate/mlc_y14_kill/vis/setColor                 white \n",
       "\n"
@@ -671,13 +679,13 @@
        "CompletedProcess(args='pbcopy', returncode=0)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "distance_for_scattering=6\n",
+    "distance_for_scattering=10\n",
     "lengths_at_points2=lengths_at_points-distance_for_scattering\n",
     "#for making kill volumes inside leaf\n",
     "narrow_x0=1\n",
