adding python script to skim and pickle files

--- a/py/JawPositioning.ipynb
+++ b/py/JawPositioning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -39,23 +39,23 @@
      "output_type": "stream",
      "text": [
       "xjaw\n",
-      "jaw narrow 17.61\n",
-      "jaw trans 11.2525\n"
+      "jaw narrow 17.805\n",
+      "jaw trans 10.12625\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "11.2525"
+       "10.12625"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "field_size=10 # cm square\n",
+    "field_size=5 # cm square\n",
     "iso=100 # cm from source\n",
     "xjaw_posz=100-53 #cm\n",
     "xjaw_height=7.8 #cm\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -86,23 +86,23 @@
      "output_type": "stream",
      "text": [
       "yjaw\n",
-      "jaw narrow 19.85\n",
-      "jaw trans 12.0175\n"
+      "jaw narrow 19.925\n",
+      "jaw trans 11.00875\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "12.0175"
+       "11.00875"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "field_size=10 # cm square\n",
+    "field_size=5 # cm square\n",
     "iso=100 # cm from source\n",
     "yjaw_posz=100-58.9 #cm\n",
     "yjaw_height=3 #cm\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -156,39 +156,39 @@
      "text": [
       "298.0 points [298. 303. 308. 313. 318. 323. 328. 333. 338. 343. 348. 353. 358. 363.\n",
       " 368. 373.]\n",
-      "15.025 82.0\n",
-      "0 298.0 303.0 164.5 163.5 97.025 82.0\n",
-      "15.275 82.475\n",
-      "1 303.0 308.0 165.4 164.5 97.75 82.475\n",
-      "15.525 82.875\n",
-      "2 308.0 313.0 166.1 165.4 98.4 82.875\n",
-      "15.775 83.15\n",
-      "3 313.0 318.0 166.5 166.1 98.92500000000001 83.15\n",
-      "16.025 83.35\n",
-      "4 318.0 323.0 166.9 166.5 99.375 83.35\n",
-      "16.275 83.5\n",
-      "5 323.0 328.0 167.1 166.9 99.775 83.5\n",
-      "16.525 83.5\n",
-      "6 328.0 333.0 167.1 166.9 100.025 83.5\n",
-      "16.775 83.375\n",
-      "7 333.0 338.0 166.9 166.6 100.15 83.375\n",
-      "17.025 83.19999999999999\n",
-      "8 338.0 343.0 166.6 166.2 100.225 83.19999999999999\n",
-      "17.275 83.0\n",
-      "9 343.0 348.0 166.2 165.8 100.275 83.0\n",
-      "17.525 82.75\n",
-      "10 348.0 353.0 165.8 165.2 100.275 82.75\n",
-      "17.775 82.375\n",
-      "11 353.0 358.0 165.2 164.3 100.15 82.375\n",
-      "18.025 81.85\n",
-      "12 358.0 363.0 164.3 163.1 99.875 81.85\n",
-      "18.275 81.275\n",
-      "13 363.0 368.0 163.1 162.0 99.55000000000001 81.275\n",
-      "18.525 80.625\n",
-      "14 368.0 373.0 162.0 160.5 99.15 80.625\n",
-      "[ 97.025  97.75   98.4    98.925  99.375  99.775 100.025 100.15  100.225\n",
-      " 100.275 100.275 100.15   99.875  99.55   99.15 ]\n",
-      "100.275 9\n"
+      "7.5125 82.0\n",
+      "0 298.0 303.0 164.5 163.5 89.5125 82.0\n",
+      "7.6375 82.475\n",
+      "1 303.0 308.0 165.4 164.5 90.1125 82.475\n",
+      "7.7625 82.875\n",
+      "2 308.0 313.0 166.1 165.4 90.6375 82.875\n",
+      "7.8875 83.15\n",
+      "3 313.0 318.0 166.5 166.1 91.03750000000001 83.15\n",
+      "8.0125 83.35\n",
+      "4 318.0 323.0 166.9 166.5 91.3625 83.35\n",
+      "8.1375 83.5\n",
+      "5 323.0 328.0 167.1 166.9 91.6375 83.5\n",
+      "8.2625 83.5\n",
+      "6 328.0 333.0 167.1 166.9 91.7625 83.5\n",
+      "8.3875 83.375\n",
+      "7 333.0 338.0 166.9 166.6 91.7625 83.375\n",
+      "8.5125 83.19999999999999\n",
+      "8 338.0 343.0 166.6 166.2 91.71249999999999 83.19999999999999\n",
+      "8.6375 83.0\n",
+      "9 343.0 348.0 166.2 165.8 91.6375 83.0\n",
+      "8.7625 82.75\n",
+      "10 348.0 353.0 165.8 165.2 91.5125 82.75\n",
+      "8.8875 82.375\n",
+      "11 353.0 358.0 165.2 164.3 91.2625 82.375\n",
+      "9.0125 81.85\n",
+      "12 358.0 363.0 164.3 163.1 90.8625 81.85\n",
+      "9.1375 81.275\n",
+      "13 363.0 368.0 163.1 162.0 90.41250000000001 81.275\n",
+      "9.2625 80.625\n",
+      "14 368.0 373.0 162.0 160.5 89.8875 80.625\n",
+      "[89.5125 90.1125 90.6375 91.0375 91.3625 91.6375 91.7625 91.7625 91.7125\n",
+      " 91.6375 91.5125 91.2625 90.8625 90.4125 89.8875]\n",
+      "91.7625 6\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -243,14 +243,14 @@
      "text": [
       "[82.    82.475 82.875 83.15  83.35  83.5   83.5   83.375 83.2   83.\n",
       " 82.75  82.375 81.85  81.275 80.625]\n",
-      "trap_of_choice 9\n",
-      "100.275 83.0\n",
+      "trap_of_choice 6\n",
+      "91.7625 83.5\n",
       "\n",
-      "base 17.275000000000006\n",
-      "shifts [-1.    -0.525 -0.125  0.15   0.35   0.5    0.5    0.375  0.2    0.\n",
-      " -0.25  -0.625 -1.15  -1.725 -2.375]\n",
-      "[ 98.725  99.2    99.6    99.875 100.075 100.225 100.225 100.1    99.925\n",
-      "  99.725  99.475  99.1    98.575  98.     97.35 ]\n"
+      "base 8.262500000000003\n",
+      "shifts [-1.5   -1.025 -0.625 -0.35  -0.15   0.     0.    -0.125 -0.3   -0.5\n",
+      " -0.75  -1.125 -1.65  -2.225 -2.875]\n",
+      "[106.7375 107.2125 107.6125 107.8875 108.0875 108.2375 108.2375 108.1125\n",
+      " 107.9375 107.7375 107.4875 107.1125 106.5875 106.0125 105.3625]\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
       "/gate/mlc_y0/geometry/setXLength          164.5 mm  \n",
       "/gate/mlc_y0/geometry/setYLength          5 mm \n",
       "/gate/mlc_y0/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y0/placement/setTranslation     98.725 0 30 mm \n",
+      "/gate/mlc_y0/placement/setTranslation     106.7375 0 30 mm \n",
       "/gate/mlc_y0/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y0/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y0/vis/setVisible               1 \n",
@@ -296,7 +296,7 @@
       "/gate/mlc_y1/geometry/setXLength          165.4 mm  \n",
       "/gate/mlc_y1/geometry/setYLength          5 mm \n",
       "/gate/mlc_y1/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y1/placement/setTranslation     99.19999999999999 0 25 mm \n",
+      "/gate/mlc_y1/placement/setTranslation     107.21249999999999 0 25 mm \n",
       "/gate/mlc_y1/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y1/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y1/vis/setVisible               1 \n",
@@ -308,7 +308,7 @@
       "/gate/mlc_y2/geometry/setXLength          166.1 mm  \n",
       "/gate/mlc_y2/geometry/setYLength          5 mm \n",
       "/gate/mlc_y2/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y2/placement/setTranslation     99.6 0 20 mm \n",
+      "/gate/mlc_y2/placement/setTranslation     107.6125 0 20 mm \n",
       "/gate/mlc_y2/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y2/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y2/vis/setVisible               1 \n",
@@ -320,7 +320,7 @@
       "/gate/mlc_y3/geometry/setXLength          166.5 mm  \n",
       "/gate/mlc_y3/geometry/setYLength          5 mm \n",
       "/gate/mlc_y3/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y3/placement/setTranslation     99.875 0 15 mm \n",
+      "/gate/mlc_y3/placement/setTranslation     107.8875 0 15 mm \n",
       "/gate/mlc_y3/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y3/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y3/vis/setVisible               1 \n",
@@ -332,7 +332,7 @@
       "/gate/mlc_y4/geometry/setXLength          166.9 mm  \n",
       "/gate/mlc_y4/geometry/setYLength          5 mm \n",
       "/gate/mlc_y4/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y4/placement/setTranslation     100.07499999999999 0 10 mm \n",
+      "/gate/mlc_y4/placement/setTranslation     108.08749999999999 0 10 mm \n",
       "/gate/mlc_y4/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y4/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y4/vis/setVisible               1 \n",
@@ -344,7 +344,7 @@
       "/gate/mlc_y5/geometry/setXLength          167.1 mm  \n",
       "/gate/mlc_y5/geometry/setYLength          5 mm \n",
       "/gate/mlc_y5/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y5/placement/setTranslation     100.225 0 5 mm \n",
+      "/gate/mlc_y5/placement/setTranslation     108.2375 0 5 mm \n",
       "/gate/mlc_y5/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y5/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y5/vis/setVisible               1 \n",
@@ -356,7 +356,7 @@
       "/gate/mlc_y6/geometry/setXLength          166.9 mm  \n",
       "/gate/mlc_y6/geometry/setYLength          5 mm \n",
       "/gate/mlc_y6/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y6/placement/setTranslation     100.225 0 0 mm \n",
+      "/gate/mlc_y6/placement/setTranslation     108.2375 0 0 mm \n",
       "/gate/mlc_y6/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y6/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y6/vis/setVisible               1 \n",
@@ -368,7 +368,7 @@
       "/gate/mlc_y7/geometry/setXLength          166.6 mm  \n",
       "/gate/mlc_y7/geometry/setYLength          5 mm \n",
       "/gate/mlc_y7/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y7/placement/setTranslation     100.1 0 -5 mm \n",
+      "/gate/mlc_y7/placement/setTranslation     108.1125 0 -5 mm \n",
       "/gate/mlc_y7/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y7/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y7/vis/setVisible               1 \n",
@@ -380,7 +380,7 @@
       "/gate/mlc_y8/geometry/setXLength          166.2 mm  \n",
       "/gate/mlc_y8/geometry/setYLength          5 mm \n",
       "/gate/mlc_y8/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y8/placement/setTranslation     99.92499999999998 0 -10 mm \n",
+      "/gate/mlc_y8/placement/setTranslation     107.93749999999999 0 -10 mm \n",
       "/gate/mlc_y8/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y8/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y8/vis/setVisible               1 \n",
@@ -392,7 +392,7 @@
       "/gate/mlc_y9/geometry/setXLength          165.8 mm  \n",
       "/gate/mlc_y9/geometry/setYLength          5 mm \n",
       "/gate/mlc_y9/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y9/placement/setTranslation     99.725 0 -15 mm \n",
+      "/gate/mlc_y9/placement/setTranslation     107.7375 0 -15 mm \n",
       "/gate/mlc_y9/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y9/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y9/vis/setVisible               1 \n",
@@ -404,7 +404,7 @@
       "/gate/mlc_y10/geometry/setXLength          165.2 mm  \n",
       "/gate/mlc_y10/geometry/setYLength          5 mm \n",
       "/gate/mlc_y10/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y10/placement/setTranslation     99.475 0 -20 mm \n",
+      "/gate/mlc_y10/placement/setTranslation     107.4875 0 -20 mm \n",
       "/gate/mlc_y10/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y10/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y10/vis/setVisible               1 \n",
@@ -416,7 +416,7 @@
       "/gate/mlc_y11/geometry/setXLength          164.3 mm  \n",
       "/gate/mlc_y11/geometry/setYLength          5 mm \n",
       "/gate/mlc_y11/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y11/placement/setTranslation     99.1 0 -25 mm \n",
+      "/gate/mlc_y11/placement/setTranslation     107.1125 0 -25 mm \n",
       "/gate/mlc_y11/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y11/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y11/vis/setVisible               1 \n",
@@ -428,7 +428,7 @@
       "/gate/mlc_y12/geometry/setXLength          163.1 mm  \n",
       "/gate/mlc_y12/geometry/setYLength          5 mm \n",
       "/gate/mlc_y12/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y12/placement/setTranslation     98.57499999999999 0 -30 mm \n",
+      "/gate/mlc_y12/placement/setTranslation     106.58749999999999 0 -30 mm \n",
       "/gate/mlc_y12/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y12/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y12/vis/setVisible               1 \n",
@@ -440,7 +440,7 @@
       "/gate/mlc_y13/geometry/setXLength          162.0 mm  \n",
       "/gate/mlc_y13/geometry/setYLength          5 mm \n",
       "/gate/mlc_y13/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y13/placement/setTranslation     98.0 0 -35 mm \n",
+      "/gate/mlc_y13/placement/setTranslation     106.0125 0 -35 mm \n",
       "/gate/mlc_y13/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y13/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y13/vis/setVisible               1 \n",
@@ -452,7 +452,7 @@
       "/gate/mlc_y14/geometry/setXLength          160.5 mm  \n",
       "/gate/mlc_y14/geometry/setYLength          5 mm \n",
       "/gate/mlc_y14/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y14/placement/setTranslation     97.35 0 -40 mm \n",
+      "/gate/mlc_y14/placement/setTranslation     105.3625 0 -40 mm \n",
       "/gate/mlc_y14/placement/setRotationAxis    1 0 0  \n",
       "/gate/mlc_y14/placement/setRotationAngle   90 deg \n",
       "/gate/mlc_y14/vis/setVisible               1 \n",
@@ -466,7 +466,7 @@
        "CompletedProcess(args='pbcopy', returncode=0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "CompletedProcess(args='pbcopy', returncode=0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,13 +746,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -771,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
